--- a/package.json
+++ b/package.json
@@ -8,8 +8,19 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@inertiajs/inertia-vue": "^0.8.0",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "inertia": "^0.0.7",
+    "sass": "^1.63.6",
+    "sass-loader": "^8.0.0",
+    "sweetalert2": "^11.7.12",
+    "vue": "^2.6.14",
+    "vue-awesome": "^3.0.4",
+    "vuetify": "^2.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
